<resources>
    <string name="app_name">WhereInTheWorld</string>
    <string name="title_activity_main">Where in the WORLD?</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>


    <string name="to_map_button">lets see the map!</string>
    <string name="to_settings_button">edit your settings</string>

    <string name="toast_test_button_string">test</string>

    <string name="settings_title_text">map settings</string>
    <string name="bathroom_switch_text">show bathrooms</string>
    <string name="busStation_switch_text">show bus stations</string>
    <string name="foodKitchen_switch_text">show food kitchens</string>
    <string name="shelter_switch_text">show food shelters</string>

    <string name="apply_button_string">Apply</string>

    <string name="summary_button_string">Summary</string>


</resources>
