<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pinkclouds">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
        android:id="@+id/settings_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_title_text"
        app:layout_constraintBottom_toTopOf="@+id/bathroom_switch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="731dp" />

        <Switch
            android:id="@+id/bathroom_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bathroom_switch_text"
            tools:layout_editor_absoluteY="731dp"
            app:layout_constraintBottom_toTopOf="@+id/foodKitchen_switch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_title_tv"
            />

        <Switch
            android:id="@+id/foodKitchen_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foodKitchen_switch_text"
            tools:layout_editor_absoluteY="731dp"
            app:layout_constraintBottom_toTopOf="@+id/shelter_switch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bathroom_switch" />

        <Switch
            android:id="@+id/shelter_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shelter_switch_text"
            tools:layout_editor_absoluteY="731dp"
            app:layout_constraintBottom_toTopOf="@+id/applyButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foodKitchen_switch"/>

        <Button
            android:id="@+id/applyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_button_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shelter_switch" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/pinkclouds" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>